<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BChat</string>
    <string name="id">ID</string>
    <string name="id_hint">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="avatar_desc">Contact Avatar</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">Send</string>
    <string name="message_hint">Type here…</string>
    <string name="empty_contact">You have no friend! Click add to add some…</string>
    <string name="empty_conversation">No conversation!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">or Create new one</string>
    <string name="no_internet">No internet connection.</string>

</resources>
