<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/ColorPrimary"
    tools:context="com.bchat.activity.LoginActivity" >

<!--         android:paddingBottom="@dimen/activity_vertical_margin" -->
<!--     android:paddingLeft="@dimen/activity_horizontal_margin" -->
<!--     android:paddingRight="@dimen/activity_horizontal_margin" -->
<!--     android:paddingTop="@dimen/activity_vertical_margin" -->
    
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewTitle"
        android:layout_margin="10dp"
        android:ems="10"
        android:maxLength="15"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="7dp"
        android:hint="@string/id_hint" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignRight="@+id/editTextPass"
        android:layout_below="@+id/editTextPass"
        android:layout_marginTop="16dp"
        android:background="@color/ColorPrimaryDark"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewForgotPassword"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_marginLeft="34dp"
        android:text="@string/signup" 
        android:textColor="@color/ColorSecondary"/>

    <TextView
        android:id="@+id/textViewNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_alert"
        android:drawablePadding="4dp"
        android:text="@string/no_internet"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="34dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextID"
        android:layout_alignRight="@+id/editTextID"
        android:layout_below="@+id/editTextID"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="15" >

        <requestFocus />
    </EditText>

</RelativeLayout>